--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-    <h1> register </h1>
-    <form action="/register" method="POST">
-        <input type="text" name="username">
-        <input type="email" name="email">
-        <input type="password" name="password">
+    <h1> login </h1>
+    <form action="/login" method="POST">
+        <input type="email" name="email" placeholder="email">
+        <input type="password" name="password" placeholder="password">
         <input type="submit">
     </form>
 
