--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Profil </h1>
-    <p> Welcome to your bookface</p>
+    <h1> Profil </h1> 
+    <p> Welcome <%= user %> </p>
     <a href="/logout">Logout</a>
 </body>
 </html>
